data/derived/comb/progs/unify/prog6711.ml.out
Characters 237-242:
  let args = List.fold_left f' base' l2 in
                               ^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type int list
       Type 'a list is not compatible with type int 
